--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,7 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>前航 - 前端导航网站</title>
+  <title>pikachu导航</title>
+  <link rel="stylesheet" href="style.8dfd8c51.css">
   <style>.icon {
       width: 1em;
       height: 1em;
@@ -13,17 +15,64 @@
       fill: currentColor;
       overflow: hidden;
     }</style>
-  <link rel="stylesheet" href="style.b99b3bd8.css">
 </head>
 
 <body>
   <header class="globalHeader">
-    <form class="searchForm" method="get" action="https://www.baidu.com/s">
-      <input name="wd" type="text">
+    <div class="headerLeft">
+      <span class="headerMenu">
+        <svg class="icon">
+          <use xlink:href="#icon-menu"></use>
+        </svg>
+      </span>
+      <aside class="asideLeft">
+        <div class="asideLogo">
+          <img src="aside.e5206746.jpg">
+          <span>皮卡丘 1.0</span>
+        </div>
+        <div class="aside-content">
+          <a href="introduction.html">
+            <svg class="icon">
+              <use xlink:href="#icon-introduction"></use>
+            </svg>
+            <span>功能介绍</span>
+          </a>
+          <a href="https://fangyinghang.com/make-a-pikachu/">
+            <svg class="icon">
+              <use xlink:href="#icon-url"></use>
+            </svg>
+            <span>
+              画个皮卡丘
+            </span>
+          </a>
+          <a href="BB.html">
+            <svg class="icon">
+              <use xlink:href="#icon-BB"></use>
+            </svg>
+            <span>
+              小声BB
+            </span>
+          </a>
+          <a href="mailto:yaokai729@outlook.com">
+            <svg class="icon">
+              <use xlink:href="#icon-email"></use>
+            </svg>
+            <span>与我联系</span>
+          </a>
+        </div>
+      </aside>
+      <div class="cover"></div>
+    </div>
+  </header>
+
+  <main class="globalMain">
+    <div class="piKaWrapper">
+      <img class="piKa" src="皮卡丘1.87c65e81.png" alt="皮卡皮卡">
+    </div>
+    <form class="searchForm" method="GET" action="https://www.baidu.com/s">
+      <input type="text" name="wd">
       <button type="submit">搜索</button>
     </form>
-  </header>
-  <main class="globalMain">
     <ul class="siteList">
       <li class="last">
         <div class="addButton">
@@ -32,16 +81,17 @@
               <use xlink:href="#icon-add"></use>
             </svg>
           </div>
-          <div class="text">新增网站</div>
-
+          <div class="text">
+            新增网站
+          </div>
         </div>
       </li>
     </ul>
   </main>
 
-  <script src="//at.alicdn.com/t/font_1473630_8pfq4zss4o8.js"></script>
+  <script src="//at.alicdn.com/t/font_1535844_82wzl6xe795.js"></script>
   <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
-  <script src="main.65ce31ab.js"></script>
+  <script src="main.6f18c5d3.js"></script>
 </body>
 
 </html>
